--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -318,8 +318,12 @@ h1 {
 #equinox h1 span {
   margin-top: 15px;
   font-size: 12px;
+  position: relative;
+  top: 65px;
 }
+
 // Moon
+
 @keyframes cresent {
   0% {
     transform: translate(-30px, 30px) scale(0.9);
