--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -208,7 +208,7 @@ h1 {
 
 .panel__nav {
   cursor: pointer;
-  opacity: 0.2;
+  opacity: 0.5;
   position: absolute;
   transition: opacity @fast @easing;
   user-select: none;
@@ -370,4 +370,31 @@ body {
 }
 html {
   background: #282a2d;
+}
+.panel-content h1::after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 80px;
+  height: 3px;
+  background: #caae1a;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 10px;
+}
+#equinox h1::after {
+  height: 0px;
+}
+
+.panel__nav::after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 50%;
+  height: 3px;
+  background: #caae1a;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 10px;
+  opacity: 1;
 }
