add sponsors section

--- a/assets/css/workshop-cards.less
+++ b/assets/css/workshop-cards.less
@@ -51,7 +51,8 @@
   }
 
   .flip-card-back {
-    background-color: #282a2d;
+    // background-color: #282a2d;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
     color: white;
     transform: rotateY(180deg);
   }
