add reavealing soon image on events cards

--- a/assets/css/formal-events.css
+++ b/assets/css/formal-events.css
@@ -9,7 +9,7 @@
   width: 300px;
   height: 400px;
   margin: 20px;
-  background: url("http://staging.technocratshorizons.com/ticketbooth/ticketing/wp-content/uploads/2016/03/4.png");
+  background: url("../img/COMING (1).png");
   background-color: black;
   background-size: cover;
   cursor: pointer;
