--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -422,7 +422,7 @@ html {
   }
   .contact-form {
     text-align: center;
-    &::before {
+    /* &::before {
       content: "";
       padding: 20px;
       background: radial-gradient(
@@ -432,7 +432,7 @@ html {
       );
       border-radius: 10px;
       transform: skewX(-38deg);
-    }
+    } */
   }
   img {
     height: 100px;
