--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -419,6 +419,8 @@ html {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    height: 65vh;
+    overflow: auto;
   }
   .contact-form {
     text-align: center;
@@ -564,5 +566,17 @@ html {
       height: 250px;
       margin: 0px;
     }
+  }
+}
+.sponsor-category {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+  .sponsor-row {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 }
