--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -9,7 +9,7 @@
 
 body {
   // background-color: #282a2d;
-  background: radial-gradient(ellipse at bottom, #3a3b03 0%, #182328 50%);
+  background: radial-gradient(ellipse at bottom, #695b0a5b 0%, #05536b34 80%);
   background-repeat: repeat;
   color: white;
   font-family: "Oswald", sans-serif;
@@ -18,6 +18,51 @@ body {
   overflow: hidden;
   perspective: 1000px;
   text-transform: uppercase;
+  // animation-name: bganimation;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+}
+
+@keyframes bganimation {
+  0% {
+    background: radial-gradient(ellipse at bottom, #5044005b 0%, #1f0d2048 80%);
+  }
+  10% {
+    background: radial-gradient(ellipse at bottom, #5044005b 4%, #1f0d2048 80%);
+  }
+  20% {
+    background: radial-gradient(ellipse at bottom, #5044005b 8%, #1f0d2048 80%);
+  }
+  30% {
+    background: radial-gradient(ellipse at bottom, #5044005b 12%, #1f0d2048 80%);
+  }
+  40% {
+    background: radial-gradient(ellipse at bottom, #5044005b 16%, #1f0d2048 80%);
+  }
+  50% {
+    background: radial-gradient(
+      ellipse at bottom,
+      #5044005b 20%,
+      #1f0d2048 80%
+    );
+  }
+  60% {
+    background: radial-gradient(ellipse at bottom, #5044005b 0%, #1f0d2048 80%);
+  }
+  70% {
+    background: radial-gradient(ellipse at bottom, #5044005b 0%, #1f0d2048 80%);
+  }
+  80% {
+    background: radial-gradient(ellipse at bottom, #5044005b 0, #1f0d2048 80%);
+  }
+  90% {
+    background: radial-gradient(ellipse at bottom, #5044005b 0, #1f0d2048 80%);
+  }
+  100.0% {
+    background: radial-gradient(ellipse at bottom, #5044005b 0, #1f0d2048 80%);
+  }
 }
 
 ::-webkit-scrollbar {
@@ -578,5 +623,15 @@ html {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+  }
+}
+.panel__nav {
+  a {
+    color: white;
+    font-size: 16px;
+    transition: all 0.6s ease-in;
+    &:hover {
+      background: #333200;
+    }
   }
 }
