--- a/assets/css/workshop-cards.less
+++ b/assets/css/workshop-cards.less
@@ -21,10 +21,10 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: all 0.6s cubic-bezier(0.215, 0.610, 0.355, 1);
+    transition: all 1s cubic-bezier(0.215, 0.610, 0.355, 1);
     transform-style: preserve-3d;
     // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: #f7d5b0 0px 0px 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 255, 200, 0.603);
   }
   .flip-card-inner:hover {
     box-shadow: none;
