updated workshop and sponsors section

--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -460,7 +460,7 @@ html {
     height: 100%;
   }
   .sponsors {
-    display: flex;
+    // display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
